--- a/jenkinsfile
+++ b/jenkinsfile
@@ -19,7 +19,7 @@ pipeline {
         }
         stage('Git Pulling') {
             steps {
-                git branch: 'master', url: 'https://github.com/umairdevops/umairdevops.git'
+                git branch: 'main', url: 'https://github.com/umairdevops/umairdevops.git'
             }
         }
         stage('Init') {
