--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -130,17 +130,17 @@ jobs:
       if: ${{ github.event.inputs.action  == 'plan' }}
       working-directory: eks
       # Generates an execution plan for Terraform
-      run: |
-        terraform plan -var-file=${{ github.event.inputs.tfvars_file }} -input=false
+      run: terraform plan -var-file=variables.tfvars -input=false
+         
 
     
       # Apply the Terraform Configuration according to the parameter
     - name: Terraform Action
       if: ${{ github.event.inputs.action  == 'apply' }}
       working-directory: eks
-      run: terraform ${{ github.event.inputs.action }} -auto-approve -var-file=${{ github.event.inputs.tfvars_file }} -input=false
+      run: terraform ${{ github.event.inputs.action }} -auto-approve -var-file=${{ github.event.inputs.variables.tfvars_file }} -input=false
 
     - name: Terraform Destroy
       if: ${{ github.event.inputs.action == 'destroy' }}
       working-directory: eks
-      run: terraform ${{ github.event.inputs.action }} -auto-approve -var-file=${{ github.event.inputs.tfvars_file }} -input=false
+      run: terraform ${{ github.event.inputs.action }} -auto-approve -var-file=${{ github.event.inputs.variables.tfvars_file }} -input=false
