--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       tfvars_file:
-        description: 'Path to the .tfvars file'
+        description: 'Path to the variables.tfvars file'
         required: true
         default: 'variables.tfvars'
       action:
