--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -138,9 +138,9 @@ jobs:
     - name: Terraform Action
       if: ${{ github.event.inputs.action  == 'apply' }}
       working-directory: eks
-      run: terraform ${{ github.event.inputs.action }} -auto-approve -var-file=${{ github.event.inputs.variables.tfvars_file }} -input=false
+      run: terraform ${{ github.event.inputs.action }} -auto-approve -var-file=${{ github.event.inputs.tfvars_file }} -input=false
 
     - name: Terraform Destroy
       if: ${{ github.event.inputs.action == 'destroy' }}
       working-directory: eks
-      run: terraform ${{ github.event.inputs.action }} -auto-approve -var-file=${{ github.event.inputs.variables.tfvars_file }} -input=false
+      run: terraform ${{ github.event.inputs.action }} -auto-approve -var-file=${{ github.event.inputs.tfvars_file }} -input=false
